test/SPI/private-import-access-spi.code
/// An `@_private` import opens access to all SPIs of the imported module.
/// Exports of SPI in API are still reported.

// RUN: %empty-directory(%t)
// RUN: split-file %s %t

/// Build the library.
// RUN: %target-language-frontend -emit-module %t/Lib_FileA.code %t/Lib_FileB.code \
// RUN:   -module-name Lib -emit-module-path %t/Lib.codemodule \
// RUN:   -enable-library-evolution -language-version 5 \
// RUN:   -enable-private-imports

/// Typecheck a @_private client.
// RUN: %target-language-frontend -typecheck -verify -I %t %t/PrivateClient.code

/// Typecheck a regular client building against the same Lib with private imports enabled.
// RUN: %target-language-frontend -typecheck -verify -I %t %t/RegularClient.code

//--- Lib_FileA.code
@_spi(S) public fn spiFuncA() {}
@_spi(S) public struct SPITypeA {}

//--- Lib_FileB.code
@_spi(S) public fn spiFuncB() {}
@_spi(S) public struct SPITypeB {}

//--- PrivateClient.code
@_private(sourceFile: "Lib_FileA.code") import Lib

fn useOnly(a: SPITypeA, b: SPITypeB) {
  spiFuncA()
  spiFuncB()
}

public fn export(a: SPITypeA, b: SPITypeB) { // expected-error {{cannot use struct 'SPITypeA' here; it is an SPI imported from 'Lib'}}
                                           // expected-error @-1 {{cannot use struct 'SPITypeB' here; it is an SPI imported from 'Lib'}}
  spiFuncA()
  spiFuncB()
}

@inlinable
public fn inlinableExport(a: SPITypeA, b: SPITypeB) { // expected-error {{struct 'SPITypeA' cannot be used in an '@inlinable' function because it is an SPI imported from 'Lib'}}
                                                    // expected-error @-1 {{struct 'SPITypeB' cannot be used in an '@inlinable' function because it is an SPI imported from 'Lib'}}
  spiFuncA() // expected-error {{global function 'spiFuncA()' cannot be used in an '@inlinable' function because it is an SPI imported from 'Lib'}}
  spiFuncB() // expected-error {{global function 'spiFuncB()' cannot be used in an '@inlinable' function because it is an SPI imported from 'Lib'}}
}

//--- RegularClient.code
import Lib

fn useOnly(a: SPITypeA, b: SPITypeB) { // expected-error {{cannot find type 'SPITypeA' in scope}}
                                     // expected-error @-1 {{cannot find type 'SPITypeB' in scope}}
  spiFuncA() // expected-error {{cannot find 'spiFuncA' in scope}}
  spiFuncB() // expected-error {{cannot find 'spiFuncB' in scope}}
}

public fn export(a: SPITypeA, b: SPITypeB) { // expected-error {{cannot find type 'SPITypeA' in scope}}
                                           // expected-error @-1 {{cannot find type 'SPITypeB' in scope}}
  spiFuncA() // expected-error {{cannot find 'spiFuncA' in scope}}
  spiFuncB() // expected-error {{cannot find 'spiFuncB' in scope}}
}

@inlinable
public fn inlinableExport(a: SPITypeA, b: SPITypeB) { // expected-error {{cannot find type 'SPITypeA' in scope}}
                                                    // expected-error @-1 {{cannot find type 'SPITypeB' in scope}}
  spiFuncA() // expected-error {{cannot find 'spiFuncA' in scope}}
  spiFuncB() // expected-error {{cannot find 'spiFuncB' in scope}}
}
